<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EndDayActivity"
    android:id="@+id/activity_end_day">


    <TextView
        android:id="@+id/congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotobold"
        android:text="@string/congratulations"
        android:textColor="@color/titleColor"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198">

    </TextView>

    <TextView
        android:id="@+id/youmadeit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ralewaymedium"
        android:text="@string/you_made_it"
        android:textColor="@color/eighty_perc_black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/congratulations"
        app:layout_constraintVertical_bias="0.022">

    </TextView>

    <ImageView
        android:id="@+id/trophy"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/trophy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/youmadeit" />

    <TextView
        android:id="@+id/day_trophey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/believer"
        android:textColor="@color/eighty_perc_black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/youmadeit" />

    <Button
        android:id="@+id/go_to_progress_btn"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/btn_rounded_primary"
        android:text="@string/go_to_progress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></Button>



</androidx.constraintlayout.widget.ConstraintLayout>