<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/fragment_progress">

    <TextView
        android:id="@+id/progress_active_training"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
...
        android:fontFamily="@font/robotobold"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/days_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

     />

</LinearLayout>
...
