...

    <!-- Navigation menu -->
    <string name="current_program">Current program:</string>
    <string name="progress">Progress</string>
    <string name="plans">Plans</string>
    <string name="my_plans">My plans</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="permission_grant_msg">Grant this permissions to add photos of your product</string>


...
